--- a/js/exampleuser.html
+++ b/js/exampleuser.html
@@ -19,6 +19,37 @@
 <script>
 
 /*
+ * Example error handler
+ *
+ */
+function _handleerror(err,input)
+{
+
+    var output = err;
+    var shoutout = "";
+
+    // Something went wrong due to incorrect input. Indicate the source of the error to the user.
+    var match;
+    if (match = /^Invalid character at position (.*):/.exec(err))
+    {
+        var p = match[1];
+        shoutout = input.substring(0,p-1) +
+                   '<span style="color: #f00">' + input.substring(p-1,p) + "</span>" +
+                   input.substring(p);
+    }
+    else if (match = /first five characters must be digits/)
+    {
+        shoutout = '<span style="color: #f00">' + input.substring(0,5) + "</span>" +
+                   input.substring(5);
+    }
+
+    document.getElementById("output").value = output;
+    document.getElementById("shoutout").innerHTML = shoutout;
+
+}
+
+
+/*
  *  Example: HealthcareGMN.verifyCheckCharacters
  *
  *  Verifying the check characters of a GMN.
@@ -30,23 +61,34 @@ function verify ()
     var input = document.getElementById("input").value;
 
     var output;
+    var shoutout;
     try
     {
+
+        // If verifyCheckCharacters returns true then all is well...
         if (HealthcareGMN.verifyCheckCharacters(input)) {
             output = "Valid"
-        } else {
+            shoutout = input;
+        } else {  // Otherwise the user-provided GMN is incorrect
+
+            // We strip the provided check character pair from the input...
             var part = input.substring(0, input.length - 2);
-            var suppliedChecks = input.substring(input.length - 2, input.length);
+
+            // ... calculate the correct check character pair and show the user
             var correctChecks = HealthcareGMN.checkCharacters(part);
-            output = "Not valid. Correct characters are: " + correctChecks;
+            output = "Not valid";
+            shoutout = part + '<span style="color: #f00">' + correctChecks + "</span>";
+
         }
+
+        document.getElementById("output").value = output;
+        document.getElementById("shoutout").innerHTML = shoutout;
+
     }
     catch (err)
     {
-        output = err;
+        _handleerror(err,input);
     }
-
-    document.getElementById("output").value = output;
 
 }
 
@@ -62,17 +104,20 @@ function addChecks ()
 
     var input = document.getElementById("input").value;
 
-    var output;
     try
     {
-        output = HealthcareGMN.addCheckCharacters(input);
+        var output = HealthcareGMN.addCheckCharacters(input);
+        var shoutout = input +
+                       '<span style="color: #f00">' +
+                       output.substring(output.length-2,output.length) +
+                       "</span>";
+        document.getElementById("output").value = output;
+        document.getElementById("shoutout").innerHTML = shoutout;
     }
     catch (err)
     {
-        output = err;
+        _handleerror(err,input);
     }
-
-    document.getElementById("output").value = output;
 
 }
 
@@ -88,17 +133,18 @@ function showChecks ()
 
     var input = document.getElementById("input").value;
 
-    var output;
     try
     {
-        output = HealthcareGMN.checkCharacters(input);
+        var output = HealthcareGMN.checkCharacters(input);
+        var shoutout = input +
+                       '<span style="color: #f00">' + output + "</span>";
+        document.getElementById("output").value = output;
+        document.getElementById("shoutout").innerHTML = shoutout;
     }
     catch (err)
     {
-        output = err;
+        _handleerror(err,input);
     }
-
-    document.getElementById("output").value = output;
 
 }
 
@@ -138,6 +184,10 @@ function showChecks ()
 </tr>
 
 </table>
+
+<br />
+
+<span id="shoutout" style="font-size: 2em; font-family: mono"></span>
 
 </body>
 
